Fix scrollbar madness

--- a/src/app.css
+++ b/src/app.css
@@ -41,6 +41,10 @@
   .w-content-size {
     field-sizing: content;
   }
+
+  .justify-center-safe {
+    justify-content: safe center;
+  }
 }
 
 @font-face {
@@ -60,9 +64,18 @@
   themes: all;
 }
 
+.tooltip {
+  position: relative;
+}
+
 .tooltip::before,
 .tooltip::after {
+  max-width: 75px;
+  white-space: normal;
   z-index: 100;
+  font-size: 0.7rem;
+  position: absolute;
+  @apply bg-base-200 text-base-content shadow-md;
 }
 
 @plugin "daisyui/theme" {
